apiserver/k8s/deployment_minikube_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiserver
spec:
  template:
    spec:
      containers:
        - name: apiserver
          imagePullPolicy: Never
