apiserver/k8s/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: apiserver
  annotations:
    cert-manager.io/cluster-issuer: cndk-ca
  labels:
    app.kubernetes.io/name: vkp
    app.kubernetes.io/component: apiserver
    app.kubernetes.io/instance: vkp
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vkp.192-168-49-2.nip.io
      secretName: tls-vkp
  rules:
    - host: vkp.192-168-49-2.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: apiserver
                port:
                  name: web
